# hello-python-x

./: pyproject.toml
notebooks/: test.ipynb  test.ju.py
notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb
