[tool.poetry]
name = "hello-python-x"
version = "0.1.0"
description = ""
authors = ["ziontee113 <ziontee113@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13" 
numpy = "^1.26.1"
matplotlib = "^3.8.0"
jupyterthemes = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
